refactor: streamline hub and player/status UI presentation